feat(assessment): refine VS-010A frontend and backend implementation and allign it with partial product journey review's decisions.
